--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "description": "Vaultic is a secure, browser-based crypto wallet for Solana and Ethereum. Create and manage multiple wallets using a single mnemonic phrase. Send and receive assets on both testnet and mainnet. Your data stays encrypted in your browser — no servers, no tracking, no compromises.",
   "keywords": [
     "vaultic",
-    "vaultic wallet",
-    "vaultic web wallet",
-    "vaultic web3 wallet",
-    "vaultic solana wallet",
-    "vaultic ethereum wallet",
-    "solana",
+    "vaultic wallet", 
+    "vaultic web wallet", 
+    "vaultic web3 wallet", 
+    "vaultic solana wallet", 
+    "vaultic ethereum wallet", 
+    "solana", 
     "ethereum",
     "wallet",
     "web3",
@@ -24,8 +24,8 @@
     "ethereum wallet"
   ],
   "author": {
-    "name": "Mohammad Bilal Mansuri",
-    "url": "https://www.linkedin.com/in/mohammadbilalmansuri"
+    "name": "",
+    "url": ""
   },
   "scripts": {
     "dev": "next dev --turbopack",
